fix: fix vertical pagination alignment

--- a/src/pages/CategoryPage/CategoryPage.module.scss
+++ b/src/pages/CategoryPage/CategoryPage.module.scss
@@ -8,10 +8,8 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   margin: 0 auto;
   width: 100%;
-  min-height: 83vh;
   height: 100%;
 }
 
